# FunWithSFML

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: CMakeLists.txt  main.cpp
src/lib/: Application.cpp  Application.h  CMakeLists.txt  moving.cpp  moving.h  pong.cpp  square_party.cpp  square_party.h  triangle_classic.cpp  triangle_classic.h  vector_helper.cpp  vector_helper.h
src/lib/moving/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  moving.cpp  moving.h
src/lib/pong/: Ball.cpp  Ball.h  CMakeLists.txt  Player.cpp  Player.h  pong.cpp  pong.h  pong_data.cpp  pong_data.h  pong_struct.cpp  pong_struct.h
src/lib/pong/core/: CMakeLists.txt
src/lib/pong/core/debug/: CMakeLists.txt  ReportLogger.cpp  ReportLogger.h
src/lib/pong/core/event/: CMakeLists.txt  event_handler.cpp  event_handler.h
src/lib/pong/core/rendering/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/lib/pong/core/resmg/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h
src/lib/pong/resmg/: CMakeLists.txt  FontManager.cpp  FontManager.h  ResourceManager.cpp
